--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1530,24 +1530,20 @@ $n-1$
  حال کافی است این تعداد را بشماریم که برابر
  $2^{{n-1}\choose{2}}$
  است.
-  \Enote
+  \Enote{n52}
   لازم است برای اثبات برابر بودن تعداد این دو دسته, ثابت کنیم که تناظر بین آن‌ها یک به یک است, به این معنی که گراف به دست آمده در این فرایند یکتا است.
  \solution*{پاسخ صحیح}
  
   اگر A مجموعه همه گراف های ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n-1}\}$ باشد و B مجموعه گراف های ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n}\}$ باشد به گونه ای که درجه تمام رئوس زوج باشد،   
     می دانیم $2^{{n-1}\choose{2}}$ = |A|
-    بنابراین می خواهیم تناظر یک به یک بین اعضای مجموعه های A و B برقرار کنیم تا نشان دهیم
+    بنابراین می‌خواهیم تناظر یک به یک بین اعضای مجموعه های A و B برقرار کنیم تا نشان دهیم
     $2^{{n-1}\choose{2}}$ = |B|
     
-    اگر G گرافی ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n-1}\}$ باشد، رأس $v_n$ را به آن اضافه می کنیم و آن را به تمام رئوس با درجه فرد وصل می کنیم و و گراف حاصل را G´ می نامیم. 
-    بنابراین تمام رئوس با درجه فرد در ،G در G´ درجه زوج دارند. همچنین چون تعداد رئوس با درجه فرد در هر گراف زوج است، پس درجه $v_n$ نیز زوج می باشد. از طرف دیگر اگر برعکس این عمل را روی هر گراف با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n}\}$ که درجه تمام رئوس آن زوج هستند انجام دهیم و رأس $v_n$ را از آن ها حذف کنیم، گرافی ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n-1}\}$ ایجاد می شود. 
+    اگر G گرافی ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n-1}\}$ باشد، رأس $v_n$ را به آن اضافه می کنیم و آن را به تمام رئوس با درجه فرد وصل می‌کنیم و گراف حاصل را G´ می‌نامیم. 
+    بنابراین تمام رئوس با درجه فرد در ،G در G´ درجه زوج دارند. همچنین چون تعداد رئوس با درجه فرد در هر گراف زوج است، پس درجه $v_n$ نیز زوج می‌باشد. از طرف دیگر اگر برعکس این عمل را روی هر گراف با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n}\}$ که درجه تمام رئوس آن زوج هستند انجام دهیم و رأس $v_n$ را از آن ها حذف کنیم، گرافی ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n-1}\}$ ایجاد می‌شود. 
     
-    برای رسیدن از گراف 1 - n رأسی a در A به گراف n رأسی b در ،B به a رأس $v_n$ و یال هایش را اضافه می کنیم و برعکس آن، برای رسیدن از b به ،a رأس $v_n$ و یال هایش را را حذف می کنیم. بنابراین با رفتن از گرافی در A به گرافی در B و برگشتن از B به ،A به همان گراف اول می رسیم. پس تناظر ما یک به یک است.
-    
-    نکته : برای اثبات تناظر یک به یک، علاوه بر متناظر کردن دو مجموعه به بکدیگر، باید یک به یک بودن این تناظر هم ثابت شود. برای این کار از دو روش می ‎توان استفاده کرد. روش اول مانند اثباتی که قبل تر برای این سوأل آوردیم و روش دیگر این است که نشان دهیم از A به B و از B به A تناظر چند به یک نداریم. به استدلال زیر توجه کنید:
-    
-    A به B : نشان می دهیم امکان ندارد با اضافه کردن رأس $v_n$ به دو گراف متمایز $a_1$ و $a_2$ از ،A به گراف یکسان b از B برسیم. از برهان خلف  استفاده می کنیم و فرض می کنیم با اضافه کردن رأس $v_n$ به دو گراف متمایز $a_1$ و $a_2$ ، به گراف یکسان b برسیم ( با وجود یکسان بودن گراف های مقصد، آن دو را $b_1$ و $b_2$ می نامیم) . بنابراین رأس $v_n$ در هر دو گراف $b_1$ و $b_2$ با یال های یکسانی وجود دارد و با حذف آن به دو گراف یکسان $a_1$ و $a_2$ می رسیم که با فرض متمایز بودن آن دو تناقض دارد. پس با اضافه کردن رأس $v_n$ به هر دو گراف متمایز از ،A به دو گراف متمایز از B می رسیم.\\
-    B به A : با توجه به استدلال بالا و هم چنین چون رئوس برچسب دارند؛ برای هر دو گراف متمایزی، زیر گراف القایی رئوس $v_1$ تا $v_{n-1}$ آن ها از هم متمایز است.
+    برای رسیدن از گراف 1 - n رأسی a در A به گراف n رأسی b در ،B به a رأس $v_n$ و یال هایش را اضافه می‌کنیم و برعکس آن، برای رسیدن از b به ،a رأس $v_n$ و یال هایش را حذف می‌کنیم. بنابراین با رفتن از گرافی در A به گرافی در B و برگشتن از B به ،A به همان گراف اول می رسیم. پس تناظر ما یک به یک است.
+ 
     
     پس چون بین اعضای این دو مجموعه تناظر یک به یک وجود دارد، 
     $2^{{n-1} \choose{2}}$ = |B|
@@ -1555,7 +1551,7 @@ $n-1$
  \question
 
     گراف همبند و بی‌جهت $G$ را در نظر بگیرید. ثابت کنید می‌توانیم یال‌های این گراف را به صورتی جهت ‌دهی کنیم که تفاضل درجه‌ی ورودی و خروجی هر راس، حداکثر یک شود.
- 
+
  \solution
 از استقرا استفاده می‌کنیم.
 
@@ -1624,6 +1620,68 @@ $n-1$
      
      در اینجا اگر تعداد یال‌هایی که دو سر آن‌ها در یک گروه است، از تعداد بقیه یال‌ها کمتر باشد، با حذف این یال‌ها، گراف خواسته شده $H$ به دست آمده است. در غیر این صورت، برای تمام راس‌های گراف، تعداد یال‌هایی که سر دیگر آن‌ها در گروه دیگر است با تعداد یال‌هایی که سر دیگر آن‌ها در همان گروه است برابر است و به این ترتیب تعداد یال‌های بین دو گروه دقیقا برابر تعداد یال‌هایی است که دو سر آن هم گروه‌ هستند. در اینجا یک یال دلخواه $AB$ که گروه راس‌های $A$و$B$ متفاوت است را انتخاب می‌کنیم، حال گروه راس $A$ را عوض می‌کنیم و به این ترتیب تعداد یال‌های بین دو گروه ثابت می‌ماند و دو سر یال $AB$ در یک گروه است در حالی که وضعیت بقیه یال‌های متصل به راس $B$ ثابت مانده است، حال تعداد یال‌هایی که راس $B$ با رئوس هم گروه خود دارد یک واحد بیشتر از تعداد یال‌هایی است که با راس‌های گروه دیگر دارد و به این ترتیب با انتقال این راس به گروه دیگر، تعداد یال‌های بین دو گروه یک واحد بیشتر می‌شود و همچنین تعداد آن از بقیه یال‌ها هم بیشتر می‌شود پس با حذف یال‌هایی که دو سر آن‌ها در یک گروه هستند که تعداد آن‌ها کمتر از نصف تعداد کل یال‌ها در گراف $G$ است، به گراف خواسته شده $H$ می‌رسیم.
        
+ \question
 
+    ثابت کنید گراف $n$ راسی با ${{n-1} \choose 2} + 2$ یال، دارای دور همیلتنی است. 
+\solution
+راس
+$n$
+را از گراف حذف می‌کنیم و گراف به دست آمده را کامل می کنیم. چون این گراف 
+  ${{n-1}\choose{2}}$ 
+  راس دارد و دور همیلتونی دارد, اگر دو راس متوالی در این دور را به راس
+  $n$
+  ام وصل کنیم, گراف حاصل با 
+  ${{n-1} \choose 2} + 2$ 
+راس   دارای دور همیلتونی است.
+\notes
+\Enote{n55} 
+در اینجا سوال برای تعدادی حالت خاص اثبات شده است, برای صحیح بودن این روش اثبات, باید  نشان داد که این حالت ها همه حالات را در بر می گیرد.(البته در ابن مثال اینطور نیست).
+\solution*{پاسخ صحیح}
+
+    پاسخ: طبق قضیه اوره می‌دانیم، اگر مجموع درجات هر دو راس غیرمجاور در گراف $n$ راسی از $n$ بزرگتر مساوی باشد، گراف دارای دور همیلونی است. پس با اثبات این‌ که در گراف مسئله ما جمع درجات هر دو راس غیرمجاور از $n$ بزرگتر مساوی است، حکم مسئله به دست می‌آید. برای اثبات این موضوع از فرض خلف استفاده می کنیم، داریم:
+
+
+\[G(V, E) ; \exists A,B \in V: n \textgreater deg(A) + deg(B)\]
+
+\[G'(V', E') ; E = E - \{A, B\}\]
+
+\[\to \left|{E'}\right| \textgreater {n-1\choose 2} + 2 - n\]
+
+\[\to \left|{V'}\right| = n-2 ; \left|{E'}\right| \textgreater {n-2\choose 2}\]
+فرض خلف به ما می‌گوید راس های غیرمجاور $A$و $B$ در گراف $G$ وجود دارند به طوری که مجموع درجات آنها از تعداد راس های گراف کمتر یا مساوی است، حال این دو راس را از گراف حذف کرده و به گراف 
+$G'$
+می‌رسیم که دارای
+$n-2$
+راس است و تعداد یال های آن بزرگتر از
+${n-2\choose 2}$
+است و چون گراف 
+$G'$
+نمی‌تواند بیش از
+${n-2\choose 2}$
+یال داشته باشد،این تناقض است، پس فرض خلف باطل و حکم ثابت است.
+
+\question
+
+    $n$ راس دور دایره قرار دارند. هر راس به دو تا راس قبلی و دو تا راس بعدیش یال دارد، ثابت کنید این گراف  از حاصل اجتماع دو دور همیلتنی به دست آمده‌است. $(n \geq 5)$
+   
+\solution
+دو دور همیلتونی به شکل زیر است:
+
+\leftline{\includegraphics[width=10.4cm, height=4.4cm]{8.jpg}} 
+\notes
+
+\refnote{n49}
+
+\refnote{n55}
+
+\solution*{پاسخ صحیح}
+
+    پاسخ: راس ها را به ترتیب روی دایره از $1$ تا $n$ شماره‌گذاری می‌کنیم. اگر $n$ فرد باشد، یک دور ما حاصل وصل شدن تمامی رئوس متوالی روی دایره به هم و دیگری حاصل وصل شدن رئوس با فاصله ۲ روی دایره به شکل
+    $\{1, 3, ..., n, 2, ..., n-1, 1\}$
+   خواهد بود و به این ترتیب دو دور همیتونی  معرفی شد که یال های آنها حاصل افراز یال های گراف اولیه ما است. اما اگر $n$ زوج بود، در دور اول به شکل
+    $\{1, 3, 2, 4, 5, ..., n, 1\}$
+    و دور دوم به شکل
+    $\{1, 2, n, n-2, n-4, ..., 4, 3, 5, ..., n-1, 1\}$
+    که در این حالت نیز این دو دور همیلتونی شرایط مسئله را دارند پس حکم ثابت است.
  
 \end{document}
