--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1626,7 +1626,7 @@ $n-1$
 \solution
 راس
 $n$
-را از گراف حذف می‌کنیم و گراف به دست آمده را کامل می کنیم. چون این گراف 
+را از گراف حذف می‌کنیم و گراف به دست آمده را کامل می‌کنیم. چون این گراف 
   ${{n-1}\choose{2}}$ 
   راس دارد و دور همیلتونی دارد, اگر دو راس متوالی در این دور را به راس
   $n$
@@ -1635,7 +1635,7 @@ $n$
 راس   دارای دور همیلتونی است.
 \notes
 \Enote{n55} 
-در اینجا سوال برای تعدادی حالت خاص اثبات شده است, برای صحیح بودن این روش اثبات, باید  نشان داد که این حالت ها همه حالات را در بر می گیرد.(البته در ابن مثال اینطور نیست).
+در اینجا سوال برای تعدادی حالت خاص اثبات شده است, برای صحیح بودن این روش اثبات, باید  نشان داد که این حالت ها همه حالات را در بر می‌گیرد.(البته در ابن مثال اینطور نیست).
 \solution*{پاسخ صحیح}
 
     پاسخ: طبق قضیه اوره می‌دانیم، اگر مجموع درجات هر دو راس غیرمجاور در گراف $n$ راسی از $n$ بزرگتر مساوی باشد، گراف دارای دور همیلونی است. پس با اثبات این‌ که در گراف مسئله ما جمع درجات هر دو راس غیرمجاور از $n$ بزرگتر مساوی است، حکم مسئله به دست می‌آید. برای اثبات این موضوع از فرض خلف استفاده می کنیم، داریم:
@@ -1662,7 +1662,8 @@ ${n-2\choose 2}$
 
 \question
 
-    $n$ راس دور دایره قرار دارند. هر راس به دو تا راس قبلی و دو تا راس بعدیش یال دارد، ثابت کنید این گراف  از حاصل اجتماع دو دور همیلتنی به دست آمده‌است. $(n \geq 5)$
+    $n$
+     راس دور دایره قرار دارند. هر راس به دو راس قبلی و دو راس بعدی خود یال دارد، ثابت کنید این گراف  از حاصل اجتماع دو دور همیلتونی به دست آمده‌است. $(n \geq 5)$
    
 \solution
 دو دور همیلتونی به شکل زیر است:
@@ -1676,9 +1677,9 @@ ${n-2\choose 2}$
 
 \solution*{پاسخ صحیح}
 
-    پاسخ: راس ها را به ترتیب روی دایره از $1$ تا $n$ شماره‌گذاری می‌کنیم. اگر $n$ فرد باشد، یک دور ما حاصل وصل شدن تمامی رئوس متوالی روی دایره به هم و دیگری حاصل وصل شدن رئوس با فاصله ۲ روی دایره به شکل
+    راس ها را به ترتیب روی دایره از $1$ تا $n$ شماره‌گذاری می‌کنیم. اگر $n$ فرد باشد، یک دور ما حاصل وصل شدن تمامی رئوس متوالی روی دایره به هم و دیگری حاصل وصل شدن رئوس با فاصله ۲ روی دایره به شکل
     $\{1, 3, ..., n, 2, ..., n-1, 1\}$
-   خواهد بود و به این ترتیب دو دور همیتونی  معرفی شد که یال های آنها حاصل افراز یال های گراف اولیه ما است. اما اگر $n$ زوج بود، در دور اول به شکل
+   خواهد بود و به این ترتیب دو دور همیلتونی  معرفی شد که یال های آنها حاصل افراز یال های گراف اولیه ما است. اما اگر $n$ زوج بود، در دور اول به شکل
     $\{1, 3, 2, 4, 5, ..., n, 1\}$
     و دور دوم به شکل
     $\{1, 2, n, n-2, n-4, ..., 4, 3, 5, ..., n-1, 1\}$
