--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1497,7 +1497,10 @@ $ s = \sum_{i=1}^{n} {a_i} $
     
     دور به طول k را (با توجه به فرض استقرا) در نظر بگیرید. حال اگر رأس u خارج از این دور وجود داشته باشد که به رئوس داخل دور، هم یال ورودی و هم یال خروجی داشته باشد (حداقل یک یال ورودی و یک یال خروجی)، با توجه به این که گراف تورنومنت قویاً همبند است و u به تمام رئوس داخل دور یال ورودی یا خروجی دارد، رئوس x و y در این دور وجود دارند به طوری که x و y همسایه باشند و از x با یال خروجی به u برویم و با یال ورودی به y برگردیم. پس دور به طول k+1 هم داریم.
     
-    در غیر این صورت، اگر رئوسی داشته باشیم که همه به رئوس داخل دور وارد می‌شوند (مجموعه (A و رئوسی داشته باشیم که همه از آن‌ها خارج می‌شوند (مجموعه ،(B چون گراف قویاً همبند است، پس حتماً از B به  A مسیر داریم. پس دور به طول k+1 داریم.
+    در غیر این صورت، اگر رئوسی داشته باشیم که همه به رئوس داخل دور وارد می‌شوند (مجموعه (A و رئوسی داشته باشیم که همه از آن‌ها خارج می‌شوند (مجموعه ،(B چون گراف قویاً همبند است، پس حتماً از B به  A مسیر داریم. این راس از B را b می‌نامیم که به راس a از A یال دارد. راس $v_2 $ از دور به طول k را در نظر بگیرید. چون همه همسایه‌های $v_2 $ به b یال دارند و از a هم یال ورودی دارند، پس می‌توان دور به طول $ k +1 $ را به صورت 
+    $ v_1 \rightarrow b \rightarrow a \rightarrow v_3 \rightarrow ... \rightarrow v_k \rightarrow v_1 $
+    تشکیل داد.
+   
     
    
    
@@ -1561,7 +1564,22 @@ $n-1$
 
 حکم: می‌خواهیم ثابت کنیم گراف n راسی را می‌توانیم به صورتی جهت ‌دهی کنیم که تفاضل درجه‌ی ورودی و خروجی هر راس آن، حداکثر یک شود. 
    
-   اثبات: گراف $n-1 $ راسی را در نظر بگیرید. طبق فرض استقرا یال‌های این گراف را به صورتی جهت ‌دهی کرده‌ایم که تفاضل درجه‌ی ورودی و خروجی هر راس، حداکثر یک است. به این گراف راس $ n$ام را اضافه می‌کنیم. این راس به هر یک از راس‌ها حداکثر یک یال دارد.  هر یال راس n را در نظر بگیرید. آن را $v_in$ می‌نامیم. اگر تا پیش از این تعداد یال‌های ورودی و خروجی راس $v_i$ برابر بود، یال را دلخواه جهت گذاری می‌کنیم. در غیراین صورت چون اختلاف درجه‌ی ورودی و خروجی راس $v_i$ یک است جهت یال $v_in$ را طوری انتخاب می‌کنیم که این اختلاف صفر شود.
+   اثبات: گراف $n-1 $ راسی را در نظر بگیرید. طبق فرض استقرا یال‌های این گراف را به صورتی جهت ‌دهی کرده‌ایم که تفاضل درجه‌ی ورودی و خروجی هر راس، حداکثر یک است. به این گراف راس $ n$ام را اضافه می‌کنیم. از راس  $ n$ فقط به یکی از راس‌های قبلی یال وصل می‌کنیم. اگر درجه خروجی این راس یکی بیشتر بود، یال را ورودی رسم می‌کنیم. اگر درجه ورودی این راس یکی بیشتر بود، یال را خروجی رسم می‌کنیم و در غیر این صورت به طور دلخواه جهت می‌دهیم. 
+ بنابراین برای گراف n راسی هم حکم ثابت شد.  
+   \notes
+   
+   \refnote{n39}
+   
+ \solution
+از استقرا استفاده می‌کنیم.
+
+پایه: برای گراف‌های با $ n = 1 , n=2 $ راس، واضح است که می‌توانیم یال‌های این گراف را به صورتی جهت ‌دهی کنیم که تفاضل درجه‌ی ورودی و خروجی هر راس، حداکثر یک شود.
+
+فرض: گراف $n-1 $ راسی را در نظر بگیرید که حکم برای آن درست است.
+
+حکم: می‌خواهیم ثابت کنیم گراف n راسی را می‌توانیم به صورتی جهت ‌دهی کنیم که تفاضل درجه‌ی ورودی و خروجی هر راس آن، حداکثر یک شود. 
+   
+   اثبات: گراف $n-1 $ راسی را در نظر بگیرید. طبق فرض استقرا یال‌های این گراف را به صورتی جهت ‌دهی کرده‌ایم که تفاضل درجه‌ی ورودی و خروجی هر راس، حداکثر یک است. به این گراف راس $ n$ام را اضافه می‌کنیم. این راس به هر یک از راس‌ها حداکثر یک یال دارد.  هر یال راس n را در نظر بگیرید. آن را $v_in$ می‌نامیم. اگر تا پیش از این تعداد یال‌های ورودی و خروجی راس $v_i$ برابر بود، یال را دلخواه جهت گذاری می‌کنیم. در غیر این صورت چون اختلاف درجه‌ی ورودی و خروجی راس $v_i$ یک است جهت یال $v_in$ را طوری انتخاب می‌کنیم که این اختلاف صفر شود.
  بنابراین برای گراف n راسی هم حکم ثابت شد.  
    \notes
    
@@ -1580,7 +1598,7 @@ $n-1$
         
     \solution*{پاسخ صحیح} 
     
-    اگر درجه تمامی رئوس گراف زوج باشد که می‌توان گذر اویلری در آن ایجاد کرد که پس از آن اگر یال‌ها را طبق جهت پیموده شده جهت‌دهی کنیم، حکم ثابت است وگرنه $2k$ تا راس درجه فرد وجود دارند که دو به دو بین آن‌ها یال اضافه می‌کنیم و پس از آن درجه تمامی رئوس زوج خواهد بود و مانند قبل یال‌ها را جهت می‌دهیم. پس از این مرحله با حذف یال‌های اضافه شده، در راس‌های با درجه فرد اختلاف درجه ورودی و خروجی یک خواهد بود و در بقیه راس‌ها صفر خواهد بود. به این ترتیب درستی حکم اثبات می‌شود.
+    اگر درجه تمامی رئوس گراف زوج باشد که می‌توان گذر اویلری در آن ایجاد کرد که پس از آن اگر یال‌ها را طبق جهت پیموده شده جهت‌دهی کنیم، حکم ثابت است وگرنه $2k$ تا راس درجه فرد وجود دارند. راس $v$ را به گراف اضافه می‌کنیم و سپس آن را به راس‌های درجه فرد گراف وصل می‌کنیم. پس از آن درجه تمامی رئوس زوج خواهد بود و مانند قبل یال‌ها را جهت می‌دهیم. در پیمایش دور اویلری درجه ورودی و خروجی هر راس برابر می‌شود. سپس راس  $v$ و یال‌هایش را حذف می‌کنیم. چون هر راس گراف حداکثر یک یال به $v$ داشت بنابراین تفاضل درجه‌ی ورودی و خروجی هر راس، حداکثر یک می‌شود.
  
  \question
   
@@ -1610,7 +1628,7 @@ $n-1$
  
 \solution*{پاسخ صحیح}
     
-   به صورت دلخواه راس های گراف $G$ را به دو دسته تقسیم می‌کنیم، سپس در هر مرحله یک راس که تعداد یال‌هایی که با راس‌های هم گروه خود دارد از تعداد یال‌هایی که با راس‌های گروه دیگر دارد بیشتر است را انتخاب می‌کنیم و آن را به گروه دیگر منتقل می‌کنیم. با استفاده از ناوردایی نشان می‌دهیم؛ بعد از تعداد متناهی مرحله، به حالتی از دسته‌بندی راس‌ها می‌رسیم که دیگر راسی برای جابجایی وجود ندارد.
+   به صورت دلخواه راس های گراف $G$ را به دو دسته تقسیم می‌کنیم، سپس در هر مرحله یک راس که تعداد یال‌هایی که با راس‌های هم گروه خود دارد از تعداد یال‌هایی که با راس‌های گروه دیگر دارد بیشتر است را انتخاب می‌کنیم و آن را به گروه دیگر منتقل می‌کنیم. با استفاده از ناوردایی نشان می‌دهیم بعد از تعداد متناهی مرحله، به حالتی از دسته‌بندی راس‌ها می‌رسیم که دیگر راسی برای جابجایی وجود ندارد.
    
    مقدار ناوردا: تعداد یال‌های بین دو گروه.
    
