--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1537,15 +1537,15 @@ $n-1$
   لازم است برای اثبات برابر بودن تعداد این دو دسته, ثابت کنیم که تناظر بین آن‌ها یک به یک است, به این معنی که گراف به دست آمده در این فرایند یکتا است.
  \solution*{پاسخ صحیح}
  
-  اگر A مجموعه همه گراف های ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n-1}\}$ باشد و B مجموعه گراف های ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n}\}$ باشد به گونه ای که درجه تمام رئوس زوج باشد،   
-    می دانیم $2^{{n-1}\choose{2}}$ = |A|
-    بنابراین می‌خواهیم تناظر یک به یک بین اعضای مجموعه های A و B برقرار کنیم تا نشان دهیم
+  اگر A مجموعه همه گراف های ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n-1}\}$ باشد و B مجموعه گراف های ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n}\}$ باشد به گونه‌ای که درجه تمام رئوس زوج باشد،   
+    می‌دانیم $2^{{n-1}\choose{2}}$ = |A|
+    بنابراین می‌خواهیم تناظر یک به یک بین اعضای مجموعه‌های A و B برقرار کنیم تا نشان دهیم
     $2^{{n-1}\choose{2}}$ = |B|
     
-    اگر G گرافی ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n-1}\}$ باشد، رأس $v_n$ را به آن اضافه می کنیم و آن را به تمام رئوس با درجه فرد وصل می‌کنیم و گراف حاصل را G´ می‌نامیم. 
-    بنابراین تمام رئوس با درجه فرد در ،G در G´ درجه زوج دارند. همچنین چون تعداد رئوس با درجه فرد در هر گراف زوج است، پس درجه $v_n$ نیز زوج می‌باشد. از طرف دیگر اگر برعکس این عمل را روی هر گراف با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n}\}$ که درجه تمام رئوس آن زوج هستند انجام دهیم و رأس $v_n$ را از آن ها حذف کنیم، گرافی ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n-1}\}$ ایجاد می‌شود. 
+    اگر G گرافی ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n-1}\}$ باشد، رأس $v_n$ را به آن اضافه می‌کنیم و آن را به تمام رئوس با درجه فرد وصل می‌کنیم و گراف حاصل را G´ می‌نامیم. 
+    بنابراین تمام رئوس با درجه فرد در ،G در G´ درجه زوج دارند. همچنین چون تعداد رئوس با درجه فرد در هر گراف زوج است، پس درجه $v_n$ نیز زوج می‌باشد. از طرف دیگر اگر برعکس این عمل را روی هر گراف با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n}\}$ که درجه تمام رئوس آن زوج هستند انجام دهیم و رأس $v_n$ را از آن‌ها حذف کنیم، گرافی ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n-1}\}$ ایجاد می‌شود. 
     
-    برای رسیدن از گراف 1 - n رأسی a در A به گراف n رأسی b در ،B به a رأس $v_n$ و یال هایش را اضافه می‌کنیم و برعکس آن، برای رسیدن از b به ،a رأس $v_n$ و یال هایش را حذف می‌کنیم. بنابراین با رفتن از گرافی در A به گرافی در B و برگشتن از B به ،A به همان گراف اول می رسیم. پس تناظر ما یک به یک است.
+    برای رسیدن از گراف 1 - n رأسی a در A به گراف n رأسی b در ،B به a رأس $v_n$ و یال‌هایش را اضافه می‌کنیم و برعکس آن، برای رسیدن از b به ،a رأس $v_n$ و یال‌هایش را حذف می‌کنیم. بنابراین با رفتن از گرافی در A به گرافی در B و برگشتن از B به ،A به همان گراف اول می‌رسیم. پس تناظر ما یک به یک است.
  
     
     پس چون بین اعضای این دو مجموعه تناظر یک به یک وجود دارد، 
@@ -1653,7 +1653,7 @@ $n$
 راس   دارای دور همیلتونی است.
 \notes
 \Enote{n55} 
-در اینجا سوال برای تعدادی حالت خاص اثبات شده است, برای صحیح بودن این روش اثبات, باید  نشان داد که این حالت ها همه حالات را در بر می‌گیرد.(البته در ابن مثال اینطور نیست).
+در اینجا سوال برای تعدادی حالت خاص اثبات شده است, برای صحیح بودن این روش اثبات, باید نشان داد که این حالت‌ها همه حالات را در بر می‌گیرد(البته در ابن مثال اینطور نیست).
 \solution*{پاسخ صحیح}
 
     پاسخ: طبق قضیه اوره می‌دانیم، اگر مجموع درجات هر دو راس غیرمجاور در گراف $n$ راسی از $n$ بزرگتر مساوی باشد، گراف دارای دور همیلونی است. پس با اثبات این‌ که در گراف مسئله ما جمع درجات هر دو راس غیرمجاور از $n$ بزرگتر مساوی است، حکم مسئله به دست می‌آید. برای اثبات این موضوع از فرض خلف استفاده می کنیم، داریم:
