ishalla final edit

--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1516,7 +1516,7 @@ $ s = \sum_{i=1}^{n} {a_i} $
 $n-1$ 
  راسی است.
  
- اثبات: گراف های 
+ اثبات: گراف‌های 
  $n-1$ 
  راسی را در نظر بگیرید. حال راس 
  $n$ 
@@ -1537,15 +1537,15 @@ $n-1$
   لازم است برای اثبات برابر بودن تعداد این دو دسته, ثابت کنیم که تناظر بین آن‌ها یک به یک است, به این معنی که گراف به دست آمده در این فرایند یکتا است.
  \solution*{پاسخ صحیح}
  
-  اگر A مجموعه همه گراف های ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n-1}\}$ باشد و B مجموعه گراف های ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n}\}$ باشد به گونه‌ای که درجه تمام رئوس زوج باشد،   
-    می‌دانیم $2^{{n-1}\choose{2}}$ = |A|
-    بنابراین می‌خواهیم تناظر یک به یک بین اعضای مجموعه‌های A و B برقرار کنیم تا نشان دهیم
+  اگر A مجموعه همه گراف های ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n-1}\}$ باشد و B مجموعه گراف های ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n}\}$ باشد به گونه ای که درجه تمام رئوس زوج باشد،   
+    می دانیم $2^{{n-1}\choose{2}}$ = |A|
+    بنابراین می‌خواهیم تناظر یک به یک بین اعضای مجموعه های A و B برقرار کنیم تا نشان دهیم
     $2^{{n-1}\choose{2}}$ = |B|
     
-    اگر G گرافی ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n-1}\}$ باشد، رأس $v_n$ را به آن اضافه می‌کنیم و آن را به تمام رئوس با درجه فرد وصل می‌کنیم و گراف حاصل را G´ می‌نامیم. 
-    بنابراین تمام رئوس با درجه فرد در ،G در G´ درجه زوج دارند. همچنین چون تعداد رئوس با درجه فرد در هر گراف زوج است، پس درجه $v_n$ نیز زوج می‌باشد. از طرف دیگر اگر برعکس این عمل را روی هر گراف با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n}\}$ که درجه تمام رئوس آن زوج هستند انجام دهیم و رأس $v_n$ را از آن‌ها حذف کنیم، گرافی ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n-1}\}$ ایجاد می‌شود. 
+    اگر G گرافی ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n-1}\}$ باشد، رأس $v_n$ را به آن اضافه می کنیم و آن را به تمام رئوس با درجه فرد وصل می‌کنیم و گراف حاصل را G´ می‌نامیم. 
+    بنابراین تمام رئوس با درجه فرد در ،G در G´ درجه زوج دارند. همچنین چون تعداد رئوس با درجه فرد در هر گراف زوج است، پس درجه $v_n$ نیز زوج می‌باشد. از طرف دیگر اگر برعکس این عمل را روی هر گراف با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n}\}$ که درجه تمام رئوس آن زوج هستند انجام دهیم و رأس $v_n$ را از آن ها حذف کنیم، گرافی ساده با مجموعه رئوس $\{v_{1}, v_{2}, \dots, v_{n-1}\}$ ایجاد می‌شود. 
     
-    برای رسیدن از گراف 1 - n رأسی a در A به گراف n رأسی b در ،B به a رأس $v_n$ و یال‌هایش را اضافه می‌کنیم و برعکس آن، برای رسیدن از b به ،a رأس $v_n$ و یال‌هایش را حذف می‌کنیم. بنابراین با رفتن از گرافی در A به گرافی در B و برگشتن از B به ،A به همان گراف اول می‌رسیم. پس تناظر ما یک به یک است.
+    برای رسیدن از گراف 1 - n رأسی a در A به گراف n رأسی b در ،B به a رأس $v_n$ و یال هایش را اضافه می‌کنیم و برعکس آن، برای رسیدن از b به ،a رأس $v_n$ و یال هایش را حذف می‌کنیم. بنابراین با رفتن از گرافی در A به گرافی در B و برگشتن از B به ،A به همان گراف اول می رسیم. پس تناظر ما یک به یک است.
  
     
     پس چون بین اعضای این دو مجموعه تناظر یک به یک وجود دارد، 
@@ -1640,7 +1640,7 @@ $n-1$
        
  \question
 
-    ثابت کنید گراف $n$ راسی با ${{n-1} \choose 2} + 2$ یال، دارای دور همیلتنی است. 
+    ثابت کنید گراف $n$ راسی با ${{n-1} \choose 2} + 2$ یال، دارای دور همیلتونی است. 
 \solution
 راس
 $n$
@@ -1653,30 +1653,25 @@ $n$
 راس   دارای دور همیلتونی است.
 \notes
 \Enote{n55} 
-در اینجا سوال برای تعدادی حالت خاص اثبات شده است, برای صحیح بودن این روش اثبات, باید نشان داد که این حالت‌ها همه حالات را در بر می‌گیرد(البته در ابن مثال اینطور نیست).
+در اینجا سوال برای تعدادی حالت خاص اثبات شده است, برای صحیح بودن این روش اثبات, باید نشان داد که این حالت‌ها همه حالات را در بر می‌گیرد(البته در این مثال اینطور نیست).
 \solution*{پاسخ صحیح}
 
-    پاسخ: طبق قضیه اوره می‌دانیم، اگر مجموع درجات هر دو راس غیرمجاور در گراف $n$ راسی از $n$ بزرگتر مساوی باشد، گراف دارای دور همیلونی است. پس با اثبات این‌ که در گراف مسئله ما جمع درجات هر دو راس غیرمجاور از $n$ بزرگتر مساوی است، حکم مسئله به دست می‌آید. برای اثبات این موضوع از فرض خلف استفاده می کنیم، داریم:
+     طبق قضیه اوره می‌دانیم، اگر مجموع درجات هر دو راس غیرمجاور در گراف $n$ راسی بزرگتر مساوی  $n$ باشد، گراف دارای دور همیلتونی است. پس با اثبات این‌ که در گراف مسئله ما جمع درجات هر دو راس غیرمجاور بزرگتر مساوی  $n$ است، حکم مسئله به دست می‌آید. برای اثبات این موضوع از برهان خلف استفاده می‌کنیم:
 
 
-\[G(V, E) ; \exists A,B \in V: n \textgreater deg(A) + deg(B)\]
-
-\[G'(V', E') ; E = E - \{A, B\}\]
-
-\[\to \left|{E'}\right| \textgreater {n-1\choose 2} + 2 - n\]
-
-\[\to \left|{V'}\right| = n-2 ; \left|{E'}\right| \textgreater {n-2\choose 2}\]
-فرض خلف به ما می‌گوید راس های غیرمجاور $A$و $B$ در گراف $G$ وجود دارند به طوری که مجموع درجات آنها از تعداد راس های گراف کمتر یا مساوی است، حال این دو راس را از گراف حذف کرده و به گراف 
+فرض کنید راس‌های غیرمجاور $A$و $B$ در گراف $G$ وجود دارند به طوری که مجموع درجات آن‌ها کمتر یا مساوی تعداد راس‌های گراف است، حال این دو راس را از گراف حذف کرده و به گراف 
 $G'$
 می‌رسیم که دارای
 $n-2$
-راس است و تعداد یال های آن بزرگتر از
-${n-2\choose 2}$
-است و چون گراف 
+راس است و برای تعداد یال‌های آن داریم:
+\[ \left|{E'}\right| \textgreater {n-1\choose 2} + 2 - n\]
+
+\[\to \left|{E'}\right| \textgreater\dfrac{(n-1)(n-2)-2(n-2)}{2}=\dfrac{(n-3)(n-2)}{2}= {n-2\choose 2}\]
+اما گراف 
 $G'$
 نمی‌تواند بیش از
 ${n-2\choose 2}$
-یال داشته باشد،این تناقض است، پس فرض خلف باطل و حکم ثابت است.
+یال داشته باشد و این تناقض است، پس فرض خلف باطل و حکم ثابت است.
 
 \question
 
@@ -1695,12 +1690,16 @@ ${n-2\choose 2}$
 
 \solution*{پاسخ صحیح}
 
-    راس ها را به ترتیب روی دایره از $1$ تا $n$ شماره‌گذاری می‌کنیم. اگر $n$ فرد باشد، یک دور ما حاصل وصل شدن تمامی رئوس متوالی روی دایره به هم و دیگری حاصل وصل شدن رئوس با فاصله ۲ روی دایره به شکل
+    راس‌ها را به ترتیب روی دایره از $1$ تا $n$ شماره‌گذاری می‌کنیم. اگر $n$ فرد باشد، یک دور ما حاصل وصل شدن تمامی رئوس متوالی روی دایره به هم و دیگری حاصل وصل شدن رئوس با فاصله ۲ روی دایره به شکل
     $\{1, 3, ..., n, 2, ..., n-1, 1\}$
-   خواهد بود و به این ترتیب دو دور همیلتونی  معرفی شد که یال های آنها حاصل افراز یال های گراف اولیه ما است. اما اگر $n$ زوج بود، در دور اول به شکل
-    $\{1, 3, 2, 4, 5, ..., n, 1\}$
+   خواهد بود و به این ترتیب دو دور همیلتونی  معرفی شد که یال‌های آن‌ها حاصل افراز یال‌های گراف اولیه ما است. اما اگر $n$ زوج بود، در دور اول به شکل
+    \[\{1, 3, 2, 4, 5, ..., n, 1\}\]
+    (اتصال دو جفت راس ۱-۳ و۲-۴ و تمام رئوس به فاصله ۱ به جز ۱-۲ و ۳-۴ )
+    
     و دور دوم به شکل
-    $\{1, 2, n, n-2, n-4, ..., 4, 3, 5, ..., n-1, 1\}$
+    \[\{1, 2, n, n-2, n-4, ..., 4, 3, 5, ..., n-1, 1\}\]
+     (اتصال دو جفت راس ۲-۱ و ۳-۴ و تمام رئوس به فاصله ۲ به جز ۴-۲ و ۳-۱ )
+     
     که در این حالت نیز این دو دور همیلتونی شرایط مسئله را دارند پس حکم ثابت است.
  
 \end{document}
