--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1702,4 +1702,48 @@ ${n-2\choose 2}$
      
     که در این حالت نیز این دو دور همیلتونی شرایط مسئله را دارند پس حکم ثابت است.
  
+ \question
+ 
+			گراف G گرافی است که در آن دور‌های فرد دو به دو حداقل در یک رأس مشترکند. عدد رنگی این گراف را بدست آورید.
+
+\solution
+
+یک دور $C$ را در نظر بگیرید. چونکه تمام دورهای فرد این گراف در حداقل یک رأس مشترکند گراف $G-C$ هیچ دور فردی ندارد و در نتیجه دو بخشی است پس با دو رنگ قابل رنگ‌آمیزی است.
+دور فرد $C$ را به گراف برمی‌گردانیم. دورهای فرد نیز با سه رنگ قابل رنگ‌آمیزی است
+ پس در اشتراک این‌ها عدد رنگی گراف
+ $\chi (G) = 3$ 
+ است
+.
+
+
+\notes
+
+\Enote
+ددر حل سوالات باید توجه کرد تمامی حالات را دربربگیریم.
+ 
+\solution*{پاسخ صحیح}
+
+دو حالت داریم:
+\begin{enumerate}
+\item
+حالتی که گراف دور فرد نداشته باشد: 
+در این صورت با توجه به آنچه در سوال دوم اثبات کردیم گراف دوبخشی بوده و 
+$\chi (G) \leq 2$.
+\item 
+حالتی که گراف دور فرد داشته باشد:
+دور فرد دلخواه $C$ را در نظر بگیرید. با توجه به اینکه تمام دورهای فرد این گراف در حداقل یک رأس مشترکند گراف $G-C$ هیچ دور فردی ندارد و در نتیجه دو بخشی است. پس با دو رنگ قابل رنگ‌آمیزی است
+و همچنین بدیهی است که هر دور فرد با سه رنگ قابل رنگ‌آمیزی است پس دور فرد
+$C$
+را با ۳ رنگ متفاوت از رنگ‌‌های استفاده شده برای رنگ‌آمیزی
+$G-C$
+رنگ می‌کنیم
+ و چون این رنگ‌ها متفاوتند می‌توان این دو گراف را ادغام کرد و همچنان یک رنگ‌آمیزی صحیح  با پنج رنگ داشت.
+ 
+ توجه کنید که ممکن است بتوان یکی از دو رنگ استفاده شده برای گراف دو بخشی را برای رنگ‌آمیزی دور فرد دوباره استفاده کرد و در کل گراف را با کمتر از پنج رنگ رنگ‌آمیزی کرد. اما در حالت بیشینه باید ۳ رنگ متفاوت از دو رنگ استفاده شده برای $G-C$ به کار برد
+ پس در کل
+ $\chi (G) \leq 5$ 
+.
+\end{enumerate}
+
+
 \end{document}
