--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1727,7 +1727,7 @@ ${n-2\choose 2}$
 \begin{enumerate}
 \item
 حالتی که گراف دور فرد نداشته باشد: 
-در این صورت با توجه به آنچه در سوال دوم اثبات کردیم گراف دوبخشی بوده و 
+در این صورت با توجه به آنچه در سوال دوم (آره می‌دونم) اثبات کردیم گراف دوبخشی بوده و 
 $\chi (G) \leq 2$.
 \item 
 حالتی که گراف دور فرد داشته باشد:
