--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1745,5 +1745,28 @@ $G-C$
 .
 \end{enumerate}
 
+\question
+ثابت کنید مقدار ثابت در چندجمله‌ای رنگی صفر است.
 
+\solution
+با توجه به این که اگر چند‌جمله‌ای رنگی را چندین بار تجزیه کنیم در نهایت به گراف مسیر یا گراف کامل می رسیم, و چند‌جمله‌ای رنگی این دو گراف برابر است با:
+\begin{center}
+گراف کامل:
+$\lambda(\lambda-1)...(\lambda-n+1)$
+
+گراف مسیر:
+$\lambda(\lambda-1)^{n-1}$
+\end{center}
+
+مقدار ثابت در چند‌جمله‌ای هر دو گراف صفر است, پس مقدار ثابت در چند‌جمله‌ای رنگی صفر است.
+\notes
+
+\refnote{n50.5}
+\solution*{پاسخ صحیح}
+
+می‌دانیم چند جمله‌ای رنگی گراف G که به صورت $P(G,\lambda)$ نوشته می‌شود تعداد حالاتی‌ است که گراف $G$ را با $\lambda$ رنگ می‌توان رنگ‌آمیزی کرد و این چندجمله‌ای باید برای هر $\lambda$ و هر گرافی  پاسخ صحیح و معناداری دهد با توجه به این تعریف $P(G,0)$ برابر صفر خواهد بود. اگر این چندجمله‌ای به صورت
+$P(G,\lambda)=c_0+c_1\lambda+c_2\lambda^2+...$
+باشد.  پس با جایگذاری $\lambda=0$ چندجمله‌ای نیز باید صفر شود یعنی
+$c_0=0$
+.
 \end{document}
