--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1727,8 +1727,10 @@ ${n-2\choose 2}$
 \begin{enumerate}
 \item
 حالتی که گراف دور فرد نداشته باشد: 
-در این صورت با توجه به آنچه در سوال دوم (آره می‌دونم) اثبات کردیم گراف دوبخشی بوده و 
-$\chi (G) \leq 2$.
+در این صورت با استناد به قضیه «گرافی که دور فرد ندارد, دو بخشی است.
+» نتیجه می‌گیریم گراف دوبخشی بوده و 
+ $\chi (G) \leq 2$
+ است.
 \item 
 حالتی که گراف دور فرد داشته باشد:
 دور فرد دلخواه $C$ را در نظر بگیرید. با توجه به اینکه تمام دورهای فرد این گراف در حداقل یک رأس مشترکند گراف $G-C$ هیچ دور فردی ندارد و در نتیجه دو بخشی است. پس با دو رنگ قابل رنگ‌آمیزی است
