last edition of graph

--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1704,11 +1704,11 @@ ${n-2\choose 2}$
  
  \question
  
-			گراف G گرافی است که در آن دور‌های فرد دو به دو حداقل در یک رأس مشترکند. عدد رنگی این گراف را بدست آورید.
+			گراف G گرافی است که در آن دور‌های فرد، دو به دو حداقل در یک رأس مشترکند. کوچک‌ترین کران بالا عدد رنگی این گراف را بدست آورید.
 
 \solution
 
-یک دور $C$ را در نظر بگیرید. چونکه تمام دورهای فرد این گراف در حداقل یک رأس مشترکند گراف $G-C$ هیچ دور فردی ندارد و در نتیجه دو بخشی است پس با دو رنگ قابل رنگ‌آمیزی است.
+یک دور $C$ را در نظر بگیرید. چونکه تمام دورهای فرد این گراف در حداقل یک رأس مشترکند گراف $G-C$ هیچ دور فردی ندارد و در نتیجه دو بخشی است، پس با دو رنگ قابل رنگ‌آمیزی است.
 دور فرد $C$ را به گراف برمی‌گردانیم. دورهای فرد نیز با سه رنگ قابل رنگ‌آمیزی است
  پس در اشتراک این‌ها عدد رنگی گراف
  $\chi (G) = 3$ 
@@ -1718,9 +1718,30 @@ ${n-2\choose 2}$
 
 \notes
 
-\Enote
-ددر حل سوالات باید توجه کرد تمامی حالات را دربربگیریم.
+\Enote{n56}
+در حل سوالات باید توجه کرد تمامی حالات را دربربگیریم.
  
+ \refnote{n50.5}
+ 
+ \solution
+ 
+اگر گراف دور فرد نداشته باشد در این صورت گراف دوبخشی بوده و 
+ $\chi (G) \leq 2$
+ است.
+در غیر این صورت اگر گراف دور فرد داشته باشد
+دور فرد دلخواه $C$ را در نظر بگیرید. با توجه به اینکه تمام دورهای فرد این گراف در حداقل یک رأس مشترکند پس از هر دور حداقل یک راس حذف می‌شود. گراف $G-C$ هیچ دور فردی ندارد پس دو بخشی است. پس با دو رنگ قابل رنگ‌آمیزی است. هر دور فرد با سه رنگ قابل رنگ‌آمیزی است پس دور فرد
+$C$
+را با ۳ رنگ متفاوت از رنگ‌‌های استفاده شده برای رنگ‌آمیزی
+$G-C$
+رنگ می‌کنیم. ممکن است بتوان یکی از دو رنگ استفاده شده برای گراف دو بخشی را برای رنگ‌آمیزی دور فرد دوباره استفاده کرد. سپس دور $C$ به همراه رنگ‌هایش را به گراف برمی‌گردانیم. پس یک رنگ‌آمیزی صحیح با پنج رنگ یا کمتر داریم. بنابراین 
+$ \chi (G) \leq 5 $
+است.
+
+\notes
+
+\Enote{n57}
+توجه کنید سوال کوچک‌ترین کران بالا را خواسته است. در اینجا کوچک‌ترین بودن این مقدار ثابت نشده است.
+
 \solution*{پاسخ صحیح}
 
 دو حالت داریم:
@@ -1736,22 +1757,25 @@ ${n-2\choose 2}$
 دور فرد دلخواه $C$ را در نظر بگیرید. با توجه به اینکه تمام دورهای فرد این گراف در حداقل یک رأس مشترکند گراف $G-C$ هیچ دور فردی ندارد و در نتیجه دو بخشی است. پس با دو رنگ قابل رنگ‌آمیزی است
 و همچنین بدیهی است که هر دور فرد با سه رنگ قابل رنگ‌آمیزی است پس دور فرد
 $C$
-را با ۳ رنگ متفاوت از رنگ‌‌های استفاده شده برای رنگ‌آمیزی
+را با حداکثر ۳ رنگ متفاوت از رنگ‌‌های استفاده شده برای رنگ‌آمیزی
 $G-C$
-رنگ می‌کنیم
- و چون این رنگ‌ها متفاوتند می‌توان این دو گراف را ادغام کرد و همچنان یک رنگ‌آمیزی صحیح  با پنج رنگ داشت.
+رنگ می‌کنیم.
+ توجه کنید که ممکن است بتوان یکی از دو رنگ استفاده شده برای گراف دو بخشی را برای رنگ‌آمیزی دور فرد دوباره استفاده کرد. بنابراین می‌توان این دو گراف را ادغام کرد و همچنان یک رنگ‌آمیزی صحیح با پنج رنگ یا کمتر داشت.
+(توجه کنید در حالت بیشینه باید ۳ رنگ متفاوت از دو رنگ استفاده شده برای $G-C$ به کار برد.) بنابراین 
+$ \chi (G) \leq 5 $
+است.
+
  
- توجه کنید که ممکن است بتوان یکی از دو رنگ استفاده شده برای گراف دو بخشی را برای رنگ‌آمیزی دور فرد دوباره استفاده کرد و در کل گراف را با کمتر از پنج رنگ رنگ‌آمیزی کرد. اما در حالت بیشینه باید ۳ رنگ متفاوت از دو رنگ استفاده شده برای $G-C$ به کار برد
- پس در کل
- $\chi (G) \leq 5$ 
-.
+ برای اثبات کوچک‌ترین بودن این مقدار گراف $k_5 $ را در نظر بگیرید که در آن همه دور‌های فرد، دو به دو حداقل در یک راس مشترک هستند یعنی شرایط سوال برای آن برقرار است. می‌دانیم عدد رنگی گراف $k_5 $ برابر ۵ است. پس کران بالا عدد رنگی گرافی با شرایط سوال بزرگ‌تر مساوی ۵ است.
+ 
+ درنهایت نتیجه می‌گیریم کوچک‌ترین کران بالا برابر ۵ است. 
 \end{enumerate}
 
 \question
 ثابت کنید مقدار ثابت در چندجمله‌ای رنگی صفر است.
 
 \solution
-با توجه به این که اگر چند‌جمله‌ای رنگی را چندین بار تجزیه کنیم در نهایت به گراف مسیر یا گراف کامل می رسیم, و چند‌جمله‌ای رنگی این دو گراف برابر است با:
+با توجه به این که اگر چند‌جمله‌ای رنگی را چندین بار تجزیه کنیم در نهایت به گراف مسیر یا گراف کامل می‌رسیم, و چند‌جمله‌ای رنگی این دو گراف برابر است با:
 \begin{center}
 گراف کامل:
 $\lambda(\lambda-1)...(\lambda-n+1)$
@@ -1766,9 +1790,9 @@ $\lambda(\lambda-1)^{n-1}$
 \refnote{n50.5}
 \solution*{پاسخ صحیح}
 
-می‌دانیم چند جمله‌ای رنگی گراف G که به صورت $P(G,\lambda)$ نوشته می‌شود تعداد حالاتی‌ است که گراف $G$ را با $\lambda$ رنگ می‌توان رنگ‌آمیزی کرد و این چندجمله‌ای باید برای هر $\lambda$ و هر گرافی  پاسخ صحیح و معناداری دهد با توجه به این تعریف $P(G,0)$ برابر صفر خواهد بود. اگر این چندجمله‌ای به صورت
+می‌دانیم چند جمله‌ای رنگی گراف G که به صورت $P(G,\lambda)$ نوشته می‌شود تعداد حالاتی‌ است که گراف $G$ را با $\lambda$ رنگ می‌توان رنگ‌آمیزی کرد و این چندجمله‌ای باید برای هر $\lambda$ و هر گرافی پاسخ صحیح و معناداری دهد. با توجه به این تعریف $P(G,0)$ برابر صفر خواهد بود. اگر این چندجمله‌ای به صورت
 $P(G,\lambda)=c_0+c_1\lambda+c_2\lambda^2+...$
-باشد.  پس با جایگذاری $\lambda=0$ چندجمله‌ای نیز باید صفر شود یعنی
+باشد، پس با جایگذاری $\lambda=0$ چندجمله‌ای نیز باید صفر شود؛ یعنی
 $c_0=0$
 .
 \end{document}
