--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1795,4 +1795,39 @@ $P(G,\lambda)=c_0+c_1\lambda+c_2\lambda^2+...$
 باشد، پس با جایگذاری $\lambda=0$ چندجمله‌ای نیز باید صفر شود؛ یعنی
 $c_0=0$
 .
+
+\chapter*{درخت}
+
+\question
+
+    ~$9n^2$ رأس به شکل یک جدول $3n \times 3n$ قرار گرفته‌اند. می‌خواهیم تعدادی از آن‌ها را با یال‌هایی به رأس‌های مجاورشان(یکی از چهار جهت) وصل کنیم، به طوری که گراف نهایی یک درخت باشد(ریشه این درخت را چپ‌ترین رأس در پایین‌ترین ردیف در نظر بگیرید).
+        به چند روش می‌توان یال‌ها را انتخاب کرد، به طوری که اگر یال‌ها را به سمت بالا و راست جهت‌دهی کنیم؛ از ریشه بتوان به همه رئوس رسید.
+
+\solution
+در حالت کلی‌تر برای جدول $ n \times n $ سوال را حل می‌کنیم. یک جدول $ 2 \times 2 $ را در نظر بگیرید. واضح است برای این، ۲ درخت داریم. حال اگر جدول $ 3 \times 3 $ داشته باشیم، مثل موارد زیر ۱۶ درخت متفاوت می‌توان کشید.
+
+\leftline{\includegraphics[width=8cm, height=3.5cm]{tree_q1.jpg}}
+
+$ 2^{1 \times 1} = 2 $
+
+$ 2^{2 \times 2} = 16 $
+
+پس می‌توان این گونه برداشت کرد که از رابطه ${{2}^{(n-1)(n-1)}} $ پیروی می‌کنند.
+پس برای جدول $ 3n \times 3n $ داریم : ${{2}^{(3n-1)(3n-1)}} $ 
+ 
+ 
+ \notes
+ 
+ \refnote{n50}
+ 
+ 
+\solution*{پاسخ صحیح}
+
+چون نمی‌توانیم به چپ و پایین حرکت کنیم پس برای رسیدن به رأس‌های پایین‌ترین ردیف تنها یک حالت وجود دارد(باید تمام یال‌های افقی رئوس پایین‌ترین ردیف به هم متصل باشند)
+    ، همچنین برای رسیدن به رأس‌های چپ‌ترین ستون نیز تنها یک حالت وجود دارد(باید تمام یال‌های عمودی رئوس چپ‌ترین ردیف به هم متصل باشند) تعداد رئوس باقیمانده نیز برابر است با:
+        $(3n - 1)(3n - 1)$
+
+    دو حالت جهت دسترسی به این رئوس وجود دارد از طریق پایین و یا چپ که دقیقا یکی از این دو مسیر باید باز باشد (اتصال رأس به یکی ازدو رأس چپ یا پایین) پس در کل می‌شود: 
+   ${{2}^{(3n-1)(3n-1)}} $
+   
 \end{document}
