--- a/h2wp.tex
+++ b/h2wp.tex
@@ -1830,4 +1830,56 @@ $ 2^{2 \times 2} = 16 $
     دو حالت جهت دسترسی به این رئوس وجود دارد از طریق پایین و یا چپ که دقیقا یکی از این دو مسیر باید باز باشد (اتصال رأس به یکی ازدو رأس چپ یا پایین) پس در کل می‌شود: 
    ${{2}^{(3n-1)(3n-1)}} $
    
+ \question
+ 
+    در درخت $T(V, E)$، مجموع فواصل تمام رئوس $T$ از هم را $dis(T)$ تعریف می‌کنیم. در هر مرحله اگر
+
+    \begin{center}
+    $\exists v, u, w \in V | ((v, u) \in E) \land ((v, w) \notin E) \land (dis(T^\prime(V, E - (v, u) + (v, w))) < dis(T))$
+    \end{center}
+
+    یال $(v, u)$ را از درخت حذف می‌کنیم و یال $(v, w)$ را اضافه می‌کنیم. واضح است که به دلیل نزولی بودن روند $dis(T)$ و مثبت بودن آن این مراحل پایان‌پذیر است. اثبات کنید درخت $T$ با هر شرایط اولیه‌ای در مرحله آخر به یک ستاره تبدیل می‌شود.($10$)
+  \solution
+  سوال را با ناوردایی حل می‌کنیم.
+  مقدار ناوردا مجموع فواصل تمام رئوس از هم است که طبق فرض سوال ناوردای کاهشی است.
+  حال کافی است اثبات کنیم که کران پایین این ناوردا گراف ستاره است.
+  اثبات:
+ حکم را به کمک برهان خلف اثبات می‌کنیم, فرض کنید گراف ستاره کران پایین نباشد, در این صورت یال 
+$(v,u)$
+و راس
+$w$
+  وجود دارد که با انجام این فرایند روی آن ها 
+ $dis(T^\prime) < dis(T)$
+ باشد
+ با توجه به تقارن میان یال ها در گراف ستاره تفاوتی ندارد که کدام را در نظر بگیریم.
+  حال با انجام یک گام روی این راس, مسیری به طول ۳ در این گراف پدید می‌آید. برای 
+  $dis(T^\prime)$
+  داریم:
+  \[dis(T^\prime)=(n-2)^2+1+2+3(n-3)\]
+  اما:
+  \[dis(T)=(n-1)^2<(n-2)(n+1)=dis(T^\prime)\]
+  که این تناقض است, پس گراف ستاره کران پایین این ناوردا است و اثبات تمام است.  
+\notes
+\Enote{n333}
+  این که گراف ستاره یک کران پایین برای این ناوردا باشد شرط لازم است اما کافی نیست و برای اثبات حکم باید نشان داد که این گراف تنها
+   کران پایین برای این ناوردا است. 
+\Nnote{n334}
+  در اینجا رسم شکل گراف پس از تغییر می‌توانست به فهم بهتر روند اثبات کمک کند.
+\Enote{n335}
+  حالت 
+  $n=3$
+  بررسی نشده است.
+\Nnote{n336}
+بهتر بود دلیل رسیدن به عبارت $dis(T^\prime)$
+ذکر شود.
+
+ \solution*{پاسخ صحیح}
+  
+    از برهان خلف استفاده می‌کنیم.
+    
+    فرض کنیم $T$ درختی است که روی آن نمی‌توان عمل جابجایی را انجام داد و ستاره نیست. از آنجایی که هر درخت به جز ستاره یک مسیر سه یالی دارد. یکی از این مسیرها را در درخت $T$  $abcd$ می‌نامیم. با حذف سه یال این مسیر هر کدام از رئوس در مؤلفه یکی از این چهار رأس قرار می‌گیرند. طبق تقارن می‌توان بدون تغییر در کلیت مسئله تعداد رأس‌های مؤلفه $b$ را از تعداد رأس‌های مؤلفه $c$ بیشتر در نظر گرفت. اگر یال بین$d$  و $c$ را قطع کنیم و  $b$  را به  $d$  متصل کنیم مجموع فواصل کاهش پیدا می‌کند (فواصل بین مؤلفه  $d$ با مؤلفه‌های  $a$ و  $b$یکی کم شده و فواصل بین مؤلفه‌های  $d$ و  $c$یکی زیاد شده است و اندازه مؤلفه  $b$به تنهایی از  $c$ بیشتر است) که این خلاف فرض است.
+     
+     پس در نتیجه حکم اثبات شده است.
+    
+  
 \end{document}
